packages/tree-sitter-groq/test/corpus/basics.txt
================================================================================
Everything selector
================================================================================

*

--------------------------------------------------------------------------------

(query
  (everything))

================================================================================
Basic filter
================================================================================

*[_type == "post"]

--------------------------------------------------------------------------------

(query
  (filter
    (everything)
    (filter_content
      (comparison_expression
        (identifier)
        (string
          (double_string
            (string_content)))))))

================================================================================
Projection with properties
================================================================================

*[_type == "post"]{title, body}

--------------------------------------------------------------------------------

(query
  (projection
    (filter
      (everything)
      (filter_content
        (comparison_expression
          (identifier)
          (string
            (double_string
              (string_content))))))
    (projection_body
      (projection_entry
        (identifier))
      (projection_entry
        (identifier)))))

================================================================================
Projection with property pair
================================================================================

*{"label": title}

--------------------------------------------------------------------------------

(query
  (projection
    (everything)
    (projection_body
      (projection_entry
        (property_pair
          key: (string
            (double_string
              (string_content)))
          value: (identifier))))))

================================================================================
Pipe expression
================================================================================

*[_type == "post"] | order(publishedAt desc)

--------------------------------------------------------------------------------

(query
  (pipe_expression
    (filter
      (everything)
      (filter_content
        (comparison_expression
          (identifier)
          (string
            (double_string
              (string_content))))))
    (function_call
      function: (identifier)
      (argument_list
        (desc_postfix
          (identifier))))))

================================================================================
Function call
================================================================================

count(items)

--------------------------------------------------------------------------------

(query
  (function_call
    function: (identifier)
    (argument_list
      (identifier))))

================================================================================
Namespaced function call
================================================================================

math::sum(prices)

--------------------------------------------------------------------------------

(query
  (namespaced_call
    namespace: (identifier)
    function: (identifier)
    (argument_list
      (identifier))))

================================================================================
Dot access
================================================================================

author.name

--------------------------------------------------------------------------------

(query
  (dot_access
    (identifier)
    (identifier)))

================================================================================
Dereference
================================================================================

author->

--------------------------------------------------------------------------------

(query
  (dereference
    (identifier)))

================================================================================
Dereference access
================================================================================

author->name

--------------------------------------------------------------------------------

(query
  (dereference_access
    (identifier)
    (identifier)))

================================================================================
Array traversal
================================================================================

items[]

--------------------------------------------------------------------------------

(query
  (array_postfix
    (identifier)))

================================================================================
Range - inclusive
================================================================================

*[0..5]

--------------------------------------------------------------------------------

(query
  (filter
    (everything)
    (filter_content
      (range
        (number)
        (number)))))

================================================================================
Range - exclusive
================================================================================

*[0...10]

--------------------------------------------------------------------------------

(query
  (filter
    (everything)
    (filter_content
      (range
        (number)
        (number)))))

================================================================================
Spread in projection
================================================================================

*{..., extra}

--------------------------------------------------------------------------------

(query
  (projection
    (everything)
    (projection_body
      (projection_entry
        (spread))
      (projection_entry
        (identifier)))))

================================================================================
Pair expression (select)
================================================================================

select(_type == "a" => "A")

--------------------------------------------------------------------------------

(query
  (function_call
    function: (identifier)
    (argument_list
      (pair_expression
        (comparison_expression
          (identifier)
          (string
            (double_string
              (string_content))))
        (string
          (double_string
            (string_content)))))))

================================================================================
String escapes
================================================================================

"hello\nworld\u0041\u{1F600}"

--------------------------------------------------------------------------------

(query
  (string
    (double_string
      (string_content)
      (escape_sequence)
      (string_content)
      (escape_sequence)
      (escape_sequence))))

================================================================================
Single quoted string
================================================================================

'hello world'

--------------------------------------------------------------------------------

(query
  (string
    (single_string
      (string_content))))

================================================================================
Line comment
================================================================================

// a comment
*

--------------------------------------------------------------------------------

(query
  (comment)
  (everything))

================================================================================
Boolean and null literals
================================================================================

select(true => null, false => 0)

--------------------------------------------------------------------------------

(query
  (function_call
    function: (identifier)
    (argument_list
      (pair_expression
        (true)
        (null))
      (pair_expression
        (false)
        (number)))))

================================================================================
Variables - this and parent
================================================================================

@ == ^

--------------------------------------------------------------------------------

(query
  (comparison_expression
    (this)
    (parent)))

================================================================================
Parameter variable
================================================================================

*[_type == $type]

--------------------------------------------------------------------------------

(query
  (filter
    (everything)
    (filter_content
      (comparison_expression
        (identifier)
        (parameter)))))

================================================================================
Logical operators
================================================================================

a && b || !c

--------------------------------------------------------------------------------

(query
  (or_expression
    (and_expression
      (identifier)
      (identifier))
    (not_expression
      (identifier))))

================================================================================
Arithmetic operators
================================================================================

a + b * c - d / e % f

--------------------------------------------------------------------------------

(query
  (additive_expression
    (additive_expression
      (identifier)
      (multiplicative_expression
        (identifier)
        (identifier)))
    (multiplicative_expression
      (multiplicative_expression
        (identifier)
        (identifier))
      (identifier))))

================================================================================
Exponent operator
================================================================================

2 ** 3 ** 4

--------------------------------------------------------------------------------

(query
  (exponent_expression
    (number)
    (exponent_expression
      (number)
      (number))))

================================================================================
In operator
================================================================================

"featured" in tags

--------------------------------------------------------------------------------

(query
  (comparison_expression
    (string
      (double_string
        (string_content)))
    (identifier)))

================================================================================
Match operator
================================================================================

title match "hello*"

--------------------------------------------------------------------------------

(query
  (comparison_expression
    (identifier)
    (string
      (double_string
        (string_content)))))

================================================================================
Object literal
================================================================================

{"key": value, ...}

--------------------------------------------------------------------------------

(query
  (object_literal
    (object_body
      (object_entry
        key: (string
          (double_string
            (string_content)))
        value: (identifier))
      (object_entry
        (spread)))))

================================================================================
Array literal
================================================================================

[1, 2, 3]

--------------------------------------------------------------------------------

(query
  (array_literal
    (argument_list
      (number)
      (number)
      (number))))

================================================================================
Parenthesized expression
================================================================================

(a + b) * c

--------------------------------------------------------------------------------

(query
  (multiplicative_expression
    (paren_expression
      (additive_expression
        (identifier)
        (identifier)))
    (identifier)))

================================================================================
Unary expression
================================================================================

-a + +b

--------------------------------------------------------------------------------

(query
  (additive_expression
    (unary_expression
      (identifier))
    (unary_expression
      (identifier))))

================================================================================
Complex query
================================================================================

*[_type == "post" && defined(title)] | order(publishedAt desc) {
  title,
  "author": author->name,
  "tags": tags[]->{ title, slug },
  "commentCount": count(comments)
}[0...10]

--------------------------------------------------------------------------------

(query
  (pipe_expression
    (filter
      (everything)
      (filter_content
        (and_expression
          (comparison_expression
            (identifier)
            (string
              (double_string
                (string_content))))
          (function_call
            function: (identifier)
            (argument_list
              (identifier))))))
    (filter
      (projection
        (function_call
          function: (identifier)
          (argument_list
            (desc_postfix
              (identifier))))
        (projection_body
          (projection_entry
            (identifier))
          (projection_entry
            (property_pair
              key: (string
                (double_string
                  (string_content)))
              value: (dereference_access
                (identifier)
                (identifier))))
          (projection_entry
            (property_pair
              key: (string
                (double_string
                  (string_content)))
              value: (projection
                (dereference
                  (array_postfix
                    (identifier)))
                (projection_body
                  (projection_entry
                    (identifier))
                  (projection_entry
                    (identifier))))))
          (projection_entry
            (property_pair
              key: (string
                (double_string
                  (string_content)))
              value: (function_call
                function: (identifier)
                (argument_list
                  (identifier)))))))
      (filter_content
        (range
          (number)
          (number))))))

================================================================================
Scientific notation numbers
================================================================================

1e10 + 2.5E-3

--------------------------------------------------------------------------------

(query
  (additive_expression
    (number)
    (number)))

================================================================================
Asc sort expression
================================================================================

name asc

--------------------------------------------------------------------------------

(query
  (asc_postfix
    (identifier)))

================================================================================
Desc sort expression
================================================================================

publishedAt desc

--------------------------------------------------------------------------------

(query
  (desc_postfix
    (identifier)))

================================================================================
Chained dereference and dot access
================================================================================

author->bio.text

--------------------------------------------------------------------------------

(query
  (dot_access
    (dereference_access
      (identifier)
      (identifier))
    (identifier)))
